pg-typed/tests/compile_fail/wrong_param_count.rs
// Should fail: query expects 1 parameter, but 2 are given.
fn main() {
    let _ = pg_typed::query!("SELECT $1::int4 AS n", 1i32, 2i32);
}
