pg-typed/tests/compile_fail/wrong_param_count.stderr
error: expected 1 parameter(s), got 2
 --> tests/compile_fail/wrong_param_count.rs:3:30
  |
3 |     let _ = pg_typed::query!("SELECT $1::int4 AS n", 1i32, 2i32);
  |                              ^^^^^^^^^^^^^^^^^^^^^^
